[gd_scene load_steps=23 format=3 uid="uid://bqcor40xvdmp4"]

[ext_resource type="Texture2D" uid="uid://bhtcyjobh7dcb" path="res://assets/100-Sub-Assets-Free/100-Sub-Assets-Free/Monsters/Corvinian_Troll-Sheet.png" id="1_bbqyn"]
[ext_resource type="Script" path="res://Troll_Enemy.gd" id="2_71iau"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_10xl5"]
height = 36.0

[sub_resource type="Animation" id="Animation_b0kt7"]
resource_name = "Idle_Down"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_i12vn"]
resource_name = "Idle_Left"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}

[sub_resource type="Animation" id="Animation_w3ntk"]
resource_name = "Idle_Right"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_owyvi"]
resource_name = "Idle_Up"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_oarde"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_genwk"]
resource_name = "Walk_Down"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_gqm1y"]
resource_name = "Walk_Left"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_r7atw"]
resource_name = "Walk_Right"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_hj5ko"]
resource_name = "Walk_Up"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1ll27"]
_data = {
"Idle_Down": SubResource("Animation_b0kt7"),
"Idle_Left": SubResource("Animation_i12vn"),
"Idle_Right": SubResource("Animation_w3ntk"),
"Idle_Up": SubResource("Animation_owyvi"),
"RESET": SubResource("Animation_oarde"),
"Walk_Down": SubResource("Animation_genwk"),
"Walk_Left": SubResource("Animation_gqm1y"),
"Walk_Right": SubResource("Animation_r7atw"),
"Walk_Up": SubResource("Animation_hj5ko")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_sm3qi"]
animation = &"Walk_Down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lpbn2"]
animation = &"Walk_Up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6hqc8"]
animation = &"Walk_Right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_r5sc7"]
animation = &"Walk_Left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_n2oxc"]
blend_point_0/node = SubResource("AnimationNodeAnimation_sm3qi")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_lpbn2")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_6hqc8")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_r5sc7")
blend_point_3/pos = Vector2(-1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ebus4"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_0pw8a"]
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_n2oxc")
states/Walk/position = Vector2(616, 100)
transitions = ["Start", "Walk", SubResource("AnimationNodeStateMachineTransition_ebus4")]

[sub_resource type="CircleShape2D" id="CircleShape2D_6rvxl"]
radius = 82.0061

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_moqd1"]
radius = 13.0
height = 40.0

[node name="EnemyTroll" type="CharacterBody2D"]
position = Vector2(276, 78)
script = ExtResource("2_71iau")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-32, -40)
scale = Vector2(1, 0.96875)
texture = ExtResource("1_bbqyn")
centered = false
hframes = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_10xl5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1ll27")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1ll27")
}
tree_root = SubResource("AnimationNodeStateMachine_0pw8a")
anim_player = NodePath("../AnimationPlayer")
parameters/Walk/blend_position = Vector2(-0.790789, -0.0228311)

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_6rvxl")

[node name="TrollHitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TrollHitBox"]
shape = SubResource("CapsuleShape2D_moqd1")

[node name="healthbar" type="ProgressBar" parent="."]
modulate = Color(1, 0, 0, 1)
offset_left = 13.0
offset_top = 16.0
offset_right = 17.0
offset_bottom = 43.0
rotation = 1.5708
show_percentage = false

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="area_entered" from="TrollHitBox" to="." method="_on_troll_hit_box_area_entered"]
